se arreglan los botones switch y se pone a funcionar el del sol y luna

--- a/boton_switch_sol_luna/index.html
+++ b/boton_switch_sol_luna/index.html
@@ -15,6 +15,7 @@
         </label>
         <img class="img_icon" src="sol-y-luna_negro.png" alt="">
         <img class="img_icon_luz" src="sol-y-luna.png" alt="">
+    <div class="fondo"></div>
     </div>
 </body>
 </html>
