--- a/boton_animado/index.html
+++ b/boton_animado/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <title>boton animado</title>
 </head>
 <body>
     
@@ -16,5 +16,7 @@
         <div class="circulo_down"></div>
         <div class="circulo_left"></div>
     </div>
+
+    
 </body>
 </html>
