ordenando los archivos y modificando el readme

--- a/buttons/boton_animado.html
+++ b/buttons/boton_animado.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <style>
 *{
     box-sizing: border-box;
     margin: 0;
@@ -92,3 +99,20 @@ body{
     transform: translateX(10em);
     transition: 0.3s;
 }
+
+ </style>
+    <title>boton animado</title>
+</head>
+<body>
+    
+    <div class="container">
+        <div class="cuadrado"></div>
+        <div class="circulo_top"></div>
+        <div class="circulo_right"></div>
+        <div class="circulo_down"></div>
+        <div class="circulo_left"></div>
+    </div>
+
+    
+</body>
+</html>
