--- a/buttons/buton_switch.html
+++ b/buttons/buton_switch.html
@@ -1,4 +1,11 @@
-*{
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+    *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -79,9 +86,19 @@
     border-radius: 10em;
     top: 1.4em;
     left: 1.5em;
-    /* top: 1.4em;
-    left: 3.8em; */
-    /* display: none; */
+   
     opacity: 0%;
     transition: .3s;
 }
+    </style>
+    <title>button switch</title>
+</head>
+<body>
+    <div class="button">
+
+        <input type="checkbox"  id="btn_switch">
+        <label class="lbl_switch" for="btn_switch">
+        </label>
+    </div>
+</body>
+</html>
