agregando id en el slider

--- a/slider_css/index.html
+++ b/slider_css/index.html
@@ -7,7 +7,7 @@
     <title>Slider</title>
 </head>
 <body>
-    <section>
+    <section id="slider">
         <div><img src="img/full_stack_java_codoacodo.jpg" alt="Imagen 1"></div>
         <div><img src="img/spring_codoacodo.jpg" alt="Imagen 2"></div>
         <div><img src="img/titulo_spring_alura.jpg" alt="Imagen 3"></div>
