--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,32 @@
     <script type="module" src="js/main.js" defer></script>
     <title>Libreria web de objetos</title>
 </head>
+
 <body>
     <section>
         <h1>Bienvenidos a la librería web Front End de objetos.</h1>
-        <h3>En este sitio encontrarás numerosas implementaciones para web realizadas en HTML, CSS y JavaScript. Podrás copiar y descargar el código, así como crear tus propias implementaciones directamente desde objetos. Sin más preámbulos, te invito a leer las instrucciones de uso rápido y a disfrutar de la experiencia</h3>
-    <button>Inicio rapido</button>
+        <h3>En este sitio encontrarás numerosas implementaciones para web realizadas en HTML, CSS y JavaScript. Podrás
+            copiar y descargar el código, así como crear tus propias implementaciones directamente desde objetos. Sin
+            más preámbulos, te invito a leer las instrucciones de uso rápido y a disfrutar de la experiencia</h3>
+        <button>Inicio rapido</button>
     </section>
 
     <section id="inicio_rapido">
         <h2>Bienvenido al inicio rápido:</h2>
-        <p>solo debes pegar el link del css en tu html:</p>
-        <p></p>
+        <div>
+            <p>Solo necesitas pegar el enlace al archivo CSS en tu HTML:</p>
+            <p>&lt;link rel="stylesheet"
+                href="https://github.com/LionelStaricoff/bilblioteca-de-recursos-web/blob/main/css/style.css"&gt;
+                <button>copiar</button></p>
+                <hr>
+        </div>
+        <div>
+        <p>También puedes incluir la URL dentro del import en tu archivo style.css: </p>
+        <p>@import url('https://github.com/LionelStaricoff/bilblioteca-de-recursos-web/blob/main/css/style.css');
+            <button>copiar</button></p>
+            <hr>
+        </div>
     </section>
 </body>
+
 </html>
