se modifica el modulo de presetacion

--- a/index.html
+++ b/index.html
@@ -21,18 +21,26 @@
     <section id="inicio_rapido">
         <h2>Bienvenido al inicio rápido:</h2>
         <div>
-            <p>Solo necesitas pegar el enlace al archivo CSS en tu HTML:</p>
+            <p>Solo necesitas pegar el enlace en tu HTML:</p>
             <p>&lt;link rel="stylesheet"
                 href="https://github.com/LionelStaricoff/bilblioteca-de-recursos-web/blob/main/css/style.css"&gt;
                 <button>copiar</button></p>
                 <hr>
         </div>
+
         <div>
         <p>También puedes incluir la URL dentro del import en tu archivo style.css: </p>
         <p>@import url('https://github.com/LionelStaricoff/bilblioteca-de-recursos-web/blob/main/css/style.css');
             <button>copiar</button></p>
             <hr>
         </div>
+
+        <div>
+            <p>Para crear objetos solo debes enlazar el modulo dentro de tu archivo.JS: </p>
+            <p>import * as objetos from 'https://github.com/LionelStaricoff/bilblioteca-de-recursos-web/blob/main/js/objectos.js';
+                <button>copiar</button></p>
+                <hr>
+            </div>
     </section>
 </body>
 
