--- a/proyecto/galeria_imagen_flexible/index.html
+++ b/proyecto/galeria_imagen_flexible/index.html
@@ -33,7 +33,7 @@
     }   
     .in:hover{ flex: 1; }
 
-    /* out  convinar el flex 1 con otros valores */
+    /* out  combinar el flex 1 con otros valores */
     .out{
          display: block;
          object-fit: cover;
