--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </nav>
 
         <div class="centro">
-            <img src="img/logo-1.png" alt="" class="logo">
+            <a href="#quienesSomos"><img src="img/logo-1.png" alt="" class="logo"></a>
             <div>
                 <h1>Bienvenidos a <br>La Librería Web Front End de Objetos</h1>
                 <h3>En este sitio encontrarás numerosas implementaciones para web realizadas en HTML, CSS y JavaScript.
@@ -266,6 +266,21 @@
         </div>
     </section>
 
+    <section class="contribucion" id="contribucion">
+        <div>
+            <h5><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver al inicio</a></h5>
+
+            <h2 class="titulo">Contribuciones:</h2>
+            <h3>Para sumar tus códigos a este proyecto, sigue los siguientes pasos:</h3>
+            <p>bla blablablabla</p>
+            <div>
+                <p>Acá ponemos las instrucciones que sean necesarias</p>
+                <BR></BR>
+                <p>PODEMOS PONER UN VIDEO MOSTRANDO CÓMO HACERLO</p>
+
+            </div>
+        </div>
+    </section>
 
     <section class="websDeInteres" id="websDeInteres">
         <div>
@@ -446,7 +461,35 @@
         <div class="example"></div>
     </section>
 
-    <section class="QuienesSomos"></section>
+    <section class="quienesSomos" id="quienesSomos">
+        <div>
+            <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
+                al inicio</a></h5>
+            <h2>¿Quiénes Somos?</h2>
+
+            Bienvenido a "La Biblioteca de Recursos Web", donde la pasión por la programación se encuentra con el deseo de
+            compartir conocimientos. Nosotros, un grupo de apasionados programadores, hemos unido fuerzas para crear
+            esta biblioteca de recursos, con la visión de facilitar tu camino en el fascinante mundo del desarrollo de
+            software.
+
+            <h3>Nuestra Historia:</h3>
+            Este proyecto surgió de la convicción de que el aprendizaje es más efectivo cuando se comparte. Cada uno de
+            nosotros aporta una perspectiva única, y estamos emocionados de poner a tu disposición los conocimientos y herramientas que hemos recopilado a lo largo de nuestros viajes.
+
+            <h3>Únete a Nuestra Comunidad:</h3>
+            Además de ser una fuente de recursos, queremos que te sientas parte de nuestra comunidad. Explora, aprende y
+            comparte tus experiencias con nosotros. Juntos, podemos hacer que el mundo de la programación sea aún más
+            emocionante y accesible.
+
+            Gracias por ser parte de nuestra historia. ¡Esperamos que encuentres inspiración y utilidad en cada línea de
+            código y recurso que compartimos!
+
+            Programáticamente,
+            Lionel "Lyon" Staricoff
+            Gladys "MagiCode" Romero
+            Luciana "LuMa" ???
+        </div>
+    </section>
 
     <script>
         // Inicializar Prism.js
