--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
                     al inicio</a></h5>
 
-            <h2 class="titulo">Webs de interés</h2>
+            <h2 class="titulo">Webs de interés:</h2>
 
             <h3>Imágenes & iconos gratis:</h3>
             <ol>
@@ -467,27 +467,25 @@
                 al inicio</a></h5>
             <h2>¿Quiénes Somos?</h2>
 
-            Bienvenido a "La Biblioteca de Recursos Web", donde la pasión por la programación se encuentra con el deseo de
-            compartir conocimientos. Nosotros, un grupo de apasionados programadores, hemos unido fuerzas para crear
+            <p>Nosotros, un grupo de apasionados programadores, hemos unido fuerzas para crear
             esta biblioteca de recursos, con la visión de facilitar tu camino en el fascinante mundo del desarrollo de
-            software.
+            software.</p>
 
-            <h3>Nuestra Historia:</h3>
-            Este proyecto surgió de la convicción de que el aprendizaje es más efectivo cuando se comparte. Cada uno de
+            <h2>Nuestra Historia:</h2>
+            <p>Este proyecto surgió de la convicción de que el aprendizaje es más efectivo cuando se comparte. Cada uno de
             nosotros aporta una perspectiva única, y estamos emocionados de poner a tu disposición los conocimientos y herramientas que hemos recopilado a lo largo de nuestros viajes.
+            </p>
 
-            <h3>Únete a Nuestra Comunidad:</h3>
-            Además de ser una fuente de recursos, queremos que te sientas parte de nuestra comunidad. Explora, aprende y
+            <h2>Únete a Nuestra Comunidad:</h2>
+            <p>Además de ser una fuente de recursos, queremos que te sientas parte de nuestra comunidad. Explora, aprende y
             comparte tus experiencias con nosotros. Juntos, podemos hacer que el mundo de la programación sea aún más
             emocionante y accesible.
-
-            Gracias por ser parte de nuestra historia. ¡Esperamos que encuentres inspiración y utilidad en cada línea de
+            </p>
+            <p>Gracias por ser parte de nuestra historia. ¡Esperamos que encuentres inspiración y utilidad en cada línea de
             código y recurso que compartimos!
-
-            Programáticamente,
-            Lionel "Lyon" Staricoff
-            Gladys "MagiCode" Romero
-            Luciana "LuMa" ???
+            </p>
+            <p>Programáticamente,<br></p>
+            <i>Lionel "Lyon" Staricoff  <span> & </span>  Gladys "MagiCode" Romero  <span> & </span> Luciana "LuMa" ???</i> 
         </div>
     </section>
 
