--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="menu">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <img src="img/iconos/menu.png" alt="menú">
+                <img src="img/iconos/menu.png" alt="menú" class="nav-toggle">
             </label>
             <ul><b>MENU</b>
                 <li><a href="#inicio">Inicio</a></li>
@@ -63,14 +63,15 @@
     <section class="libreria" id="libreria">
         <div class="menuTemas"> 
             <div class="fijo">
+                <input type="checkbox" id="check-2">
+                <label for="check-2" class="checkbtn-2">
+                    <img src="img/iconos/menu.png" alt="menú">
+                </label>
                 <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
                         al inicio</a></h5>
                 <h3>LIBRERIA</h3>
             </div>
-            <input type="checkbox" id="check-2">
-            <label for="check-2" class="checkbtn-2">
-                <img src="img/iconos/menu.png" alt="menú">
-            </label>
+
             <div class="menuMobile">
                 <div class="listado">
 
