--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <nav class="menu">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <img src="img/iconos/menu.png" alt="menú" class="nav-toggle">
+                <img src="img/iconos/menu.png" alt="menú">
             </label>
             <ul><b>MENU</b>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#libreria">Librería</a></li>
                 <li><a href="#enlaces">Enlaces</a></li>
-                <li><a href="#colaboraciones">Colaboraciones</a></li>
+                <li><a href="#contribucion">Contribuciones</a></li>
                 <li><a href="#websDeInteres">Webs de Interés</a></li>
                 <li><a href="#quienesSomos">Quienes Somos</a></li>
                 <!-- <li class="darkMode"><label for="darkMode"><img src="img/iconos/claro-oscuro.png"
