actualizando la magia hljs

--- a/index.html
+++ b/index.html
@@ -490,15 +490,11 @@
         </div>
     </section>
 
-    <script>
-        // Inicializar Prism.js
-        Prism.highlightAll();
-
-    </script>
+  
     <script src="js/menu.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script>hljs.highlightAll();</script>
-
+    <script defer>hljs.highlightAll();</script>
+  
 </body>
 
 </html>
