--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
         </div>
     </section>
 
-  
-    <script src="js/menu.js"></script>
+
+    <script  type="module" src="js/menu.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script defer>hljs.highlightAll();</script>
   
