separé el css en varios archivos y deshabilité el highlights porque me traía problemas

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Biblioteca de Recursos Web</title>
 </head>
-
 <body>
     <section class="inicio" id="inicio">
         <nav class="menu">
@@ -20,7 +18,7 @@
                 <img src="img/iconos/menu.png" alt="menú">
             </label>
             <ul><b>MENU</b>
-                <li><a href="#inicio">Inicio</a></li>
+                <!-- <li><a href="#inicio">Inicio</a></li> -->
                 <li><a href="#libreria">Librería</a></li>
                 <li><a href="#enlaces">Enlaces</a></li>
                 <li><a href="#contribucion">Contribuciones</a></li>
@@ -56,7 +54,6 @@
             </button>
         </div>
     </section>
-
     <section class="libreria" id="libreria">
         <div class="menuTemas">
             <div class="fijo">
@@ -192,46 +189,43 @@
                 <button>JS</button>
                 <button>OBJECT</button>
             </div>
-
             <div class="ejemplo">
                 <button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px"
                         height="20px"></button>
-
                 <!-- <pre style="tab-size: 2;">
                 <code class="language-html"> -->
                 <div class=contenidoEjemplo>
                     <!-- código HTML aquí -->
-                    &lt;!DOCTYPE html&gt;
-                    &lt;html lang="es"&gt;
-                    &lt;head&gt;
-                    &lt;meta charset="UTF-8"&gt;
-                    &lt;meta name="viewport" content="width=device-width, initial-scalegt, supongamos que esto es mucho
+&lt;!DOCTYPE html&gt;
+&lt;html lang="es"&gt;
+&lt;head&gt;
+&lt;meta charset="UTF-8"&gt;
+&lt;meta name="viewport" content="width=device-width, initial-scalegt, supongamos que esto es mucho
                     más largo;
-                    &lt;title&gt;Mi Página&lt;/title&gt;
-                    &lt;/head&gt;
-                    &lt;body&gt;
-                    &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;
-                    &lt;/body&gt;
-                    &lt;/html&gt;
+&lt;title&gt;Mi Página&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;
+&lt;/body&gt;
+&lt;/html&gt;
 
-                    &lt;!DOCTYPE html&gt;
-                    &lt;html lang="es"&gt;
-                    &lt;head&gt;
-                    &lt;meta charset="UTF-8"&gt;
-                    &lt;meta name="viewport" content="width=device-width, initial-scalegt;
-                    &lt;title&gt;Mi Página&lt;/title&gt;
-                    &lt;/head&gt;
-                    &lt;body&gt;
-                    &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;
-                    &lt;/body&gt;
-                    &lt;/html&gt;
+&lt;!DOCTYPE html&gt;
+&lt;html lang="es"&gt;
+&lt;head&gt;
+&lt;meta charset="UTF-8"&gt;
+&lt;meta name="viewport" content="width=device-width, initial-scalegt;
+&lt;title&gt;Mi Página&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;
+&lt;/body&gt;
+&lt;/html&gt;
                 </div>
                 <!-- </code>
                 </pre> -->
             </div>
         </div>
     </section>
-
     <section class="enlaces" id="enlaces">
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
@@ -246,7 +240,6 @@
                     </p>
                     <br>
                 </div>
-
                 <div>
                     <p>También puedes incluir la URL dentro del import en tu archivo style.css: </p>
                     <p class="link">@import
@@ -255,7 +248,6 @@
                     </p>
                     <br>
                 </div>
-
                 <div>
                     <p>Para crear objetos sólo debes enlazar el módulo dentro de tu archivo.JS: </p>
                     <p class="link">import * as objetos from
@@ -273,10 +265,8 @@
                     <hr>
                 </div>
             </div>
-
         </div>
     </section>
-
     <section class="contribucion" id="contribucion">
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
@@ -292,7 +282,6 @@
             </div>
         </div>
     </section>
-
     <section class="websDeInteres" id="websDeInteres">
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
@@ -472,7 +461,6 @@
             </div>
         </div>
     </section>
-
     <section class="quienesSomos" id="quienesSomos">
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
@@ -507,7 +495,7 @@
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script defer>hljs.highlightAll();</script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script defer>hljs.highlightAll()</script> -->
 </body>
 </html>
