agregué fotos a readme

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css">
+    <link rel="stylesheet" href="path/to/prism.css" />
+    <link href="prism.css" rel="stylesheet" />
+    <!-- <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css"> -->
 
     <link rel="stylesheet" href="css/styles.css">
     <title>Biblioteca de Recursos Web</title>
@@ -196,30 +197,29 @@
                 <code class="language-html"> -->
                 <div class=contenidoEjemplo>
                     <!-- código HTML aquí -->
-&lt;!DOCTYPE html&gt;
-&lt;html lang="es"&gt;
-&lt;head&gt;
-&lt;meta charset="UTF-8"&gt;
-&lt;meta name="viewport" content="width=device-width, initial-scalegt, supongamos que esto es mucho
-                    más largo;
-&lt;title&gt;Mi Página&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
-    &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;
-&lt;/body&gt;
-&lt;/html&gt;
+                    &lt;!DOCTYPE html&gt;<br>
+                    &lt;html lang="es"&gt;<br>
+                    &lt;head&gt;<br>
+                    &lt;meta charset="UTF-8"&gt;<br>
+                    &lt;meta name="viewport" content="width=device-width, initial-scalegt;<br>
+                    &lt;title&gt;Mi Página&lt;/title&gt;<br>
+                    &lt;/head&gt;<br>
+                    &lt;body&gt;<br>
+                        &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;<br>
+                    &lt;/body&gt;<br>
+                    &lt;/html&gt;<br>
 
-&lt;!DOCTYPE html&gt;
-&lt;html lang="es"&gt;
-&lt;head&gt;
-&lt;meta charset="UTF-8"&gt;
-&lt;meta name="viewport" content="width=device-width, initial-scalegt;
-&lt;title&gt;Mi Página&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
-    &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;
-&lt;/body&gt;
-&lt;/html&gt;
+                    &lt;!DOCTYPE html&gt;<br>
+                    &lt;html lang="es"&gt;<br>
+                    &lt;head&gt;<br>
+                    &lt;meta charset="UTF-8"&gt;<br>
+                    &lt;meta name="viewport" content="width=device-width, initial-scalegt;<br>
+                    &lt;title&gt;Mi Página&lt;/title&gt;<br>
+                    &lt;/head&gt;<br>
+                    &lt;body&gt;<br>
+                        &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;<br>
+                    &lt;/body&gt;<br>
+                    &lt;/html&gt;<br>
                 </div>
                 <!-- </code>
                 </pre> -->
@@ -495,6 +495,7 @@
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
+    <script src="prism.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script defer>hljs.highlightAll()</script> -->
 </body>
