--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="path/to/prism.css" />
-    <link href="prism.css" rel="stylesheet" />
     <!-- <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css"> -->
 
@@ -34,8 +33,8 @@
         <div class="centro">
             <a href="#quienesSomos"><img src="img/logo-1.png" alt="" class="logo"></a>
             <div>
-                <h1>Bienvenidos a <br>La Librería Web Front End de Objetos</h1>
-                <h3>En este sitio encontrarás numerosas implementaciones para web realizadas en HTML, CSS y JavaScript.
+                <h1>Bienvenidos a <br>La Librería Web Front End</h1>
+                <h3>En este sitio encontrarás numerosas implementaciones para web realizadas en HTML, CSS, JavaScript y Object.
                     Podrás copiar y descargar el código, así como crear tus propias implementaciones directamente desde
                     objetos.
                     <br>
@@ -291,7 +290,6 @@
             <div class="listaDeEnlaces">
                 <h3>Imágenes & iconos gratis:</h3>
                 <ol>
-                    <li><a href="https://www.freepik.es/" target="_blank">https://www.freepik.es/ (iconos avg)</a></li>
                     <li><a href="https://www.iconfinder.com/" target="_blank">https://www.iconfinder.com/</a></li>
                     <li><a href="https://dryicons.com/" target="_blank">https://dryicons.com/</a></li>
                     <li><a href="https://vector.me/" target="_blank">https://vector.me/</a></li>
@@ -310,14 +308,13 @@
                     <li><a href="https://favicon.io/" target="_blank">https://favicon.io/</a></li>
                     <li><a href="https://fontawesome.com/" target="_blank">https://fontawesome.com/</a></li>
                     <li><a href="https://fonts.google.com/iconshttps://fonts.google.com/icons"
-                            target="_blank">https://fonts.google.com/iconshttps://fonts.google.com/icons (tambien tiene
-                            tipos de letras)</a></li>
+                            target="_blank">https://fonts.google.com/iconshttps://fonts.google.com/icons</a></li>
                     <li><a href="https://freeillustrations.xyz/" target="_blank">https://freeillustrations.xyz/</a></li>
                     <li><a href="https://error404.fun/" target="_blank">https://error404.fun/</a></li>
                     <li><a href="https://bgjar.com/" target="_blank">https://bgjar.com/ (fondos svg)</a></li>
-                    <li><a href="https://burst.shopify.com/" target="_blank">https://coolors.co/ (para crear paletas de
+                    <li><a href="https://coolors.co/" target="_blank">https://coolors.co/ (para crear paletas de
                             colores)</a></li>
-                    <li><a href="https://dryicons.com/" target="_blank">https://burst.shopify.com/ (fotos free)</a></li>
+                    <li><a href="https://burst.shopify.com/" target="_blank">https://burst.shopify.com/ (fotos free)</a></li>
                     <li><a href="https://stocksnap.io/" target="_blank">https://stocksnap.io/</a></li>
                     <li><a href="https://www.stockvault.net/" target="_blank">https://www.stockvault.net/</a></li>
                     <li><a href="https://pixabay.com/es/" target="_blank">https://pixabay.com/es/ </a></li>
@@ -495,7 +492,6 @@
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
-    <script src="prism.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script defer>hljs.highlightAll()</script> -->
 </body>
