agregando carpeta imagenes talentium

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="path/to/prism.css" />
-    <!-- <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css"> -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css"> 
 
     <link rel="stylesheet" href="css/styles.css">
     <title>Biblioteca de Recursos Web</title>
@@ -192,8 +192,8 @@
             <div class="ejemplo">
                 <button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px"
                         height="20px"></button>
-                <!-- <pre style="tab-size: 2;">
-                <code class="language-html"> -->
+                <pre style="tab-size: 2;">
+                <code class="language-html"> 
                 <div class=contenidoEjemplo>
                     <!-- código HTML aquí -->
                     &lt;!DOCTYPE html&gt;<br>
@@ -220,8 +220,8 @@
                     &lt;/body&gt;<br>
                     &lt;/html&gt;<br>
                 </div>
-                <!-- </code>
-                </pre> -->
+                 </code>
+                </pre> 
             </div>
         </div>
     </section>
@@ -492,7 +492,7 @@
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script defer>hljs.highlightAll()</script> -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script>hljs.highlightAll()</script> 
 </body>
 </html>
