Versión mergeada x Lio 7-3-24. Pendiente corregir el Readme. Pero antes haré lo de Talemnium

--- a/proyecto/Toggle-Button/index.html
+++ b/proyecto/Toggle-Button/index.html
@@ -11,7 +11,7 @@
         <input type="checkbox" id="test">
             <label for="test"></label>
             <div class="container">
-<!--SET IMG Path-->         <img class="char" 
+                <img class="char" 
                 src="https://image.shutterstock.com/image-vector/man-run-cycle-animation-sprite-260nw-1063610867.jpg" >
             </div>
     </div>
