agregando diagrama de flujo para cargar la libreria

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Biblioteca de Recursos Web</title>
 </head>
 <body>
+
     <section class="inicio" id="inicio">
         <nav class="menu">
             <input type="checkbox" id="check">
@@ -18,15 +19,11 @@
                 <img src="img/iconos/menu.png" alt="menú">
             </label>
             <ul><b>MENU</b>
-                <!-- <li><a href="#inicio">Inicio</a></li> -->
                 <li><a href="#libreria">Librería</a></li>
                 <li><a href="#enlaces">Enlaces</a></li>
                 <li><a href="#contribucion">Contribuciones</a></li>
                 <li><a href="#websDeInteres">Webs de Interés</a></li>
                 <li><a href="#quienesSomos">Quienes Somos</a></li>
-                <!-- <li class="darkMode"><label for="darkMode"><img src="img/iconos/claro-oscuro.png"
-                            alt="darkMode"></label>
-                </li> -->
             </ul>
         </nav>
 
@@ -54,6 +51,7 @@
             </button>
         </div>
     </section>
+
     <section class="libreria" id="libreria">
         <div class="menuTemas">
             <div class="fijo">
@@ -66,6 +64,7 @@
                 <h3>LIBRERIA</h3>
             </div>
 
+            <!--menu de items-->
             <div class="menuMobile">
                 <div class="listado">
 
@@ -181,7 +180,9 @@
                 </div>
             </div>
         </div>
+
         <div class="contenedorEjemplo">
+
             <div class="botones">
                 <button>VISTA</button>
                 <button>HTML</button>
@@ -189,6 +190,7 @@
                 <button>JS</button>
                 <button>OBJECT</button>
             </div>
+
             <div class="ejemplo">
                 <button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px"
                         height="20px"></button>
@@ -224,7 +226,9 @@
                 </pre> 
             </div>
         </div>
+        
     </section>
+
     <section class="enlaces" id="enlaces">
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
