arreglé medidas responsive de la sección Librería (.contenedorEjemplo)

--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
             <div class="ejemplo">
                 <button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px"
                         height="20px"></button>
-                <pre style="tab-size: 2;">
-                <code class="language-html"> 
-                <div class=contenidoEjemplo>
+                <!-- <pre style="tab-size: 2;">
+                <code class="ej_html ej_css ej_js ej_object">  -->
+                <div class="contenidoEjemplo">
                     <!-- código HTML aquí -->
-                    &lt;!DOCTYPE html&gt;<br>
+                    <!-- &lt;!DOCTYPE html&gt;<br>
                     &lt;html lang="es"&gt;<br>
                     &lt;head&gt;<br>
                     &lt;meta charset="UTF-8"&gt;<br>
@@ -220,10 +220,10 @@
                     &lt;body&gt;<br>
                         &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;<br>
                     &lt;/body&gt;<br>
-                    &lt;/html&gt;<br>
+                    &lt;/html&gt;<br> -->
                 </div>
-                 </code>
-                </pre> 
+                 <!-- </code>
+                </pre>  -->
             </div>
         </div>
         
@@ -473,7 +473,7 @@
                 de
                 software.</p>
 
-            <h2>Nuestra Historia:</h2>
+            <h2>Nuestra motivación:</h2>
             <p>Este proyecto surgió de la convicción de que el aprendizaje es más efectivo cuando se comparte. Cada uno
                 de
                 nosotros aporta una perspectiva única, y estamos emocionados de poner a tu disposición los conocimientos
@@ -492,7 +492,7 @@
                 código y recurso que compartimos!
             </p>
             <p>Programáticamente,<br></p>
-            <i>Lionel "Lyon" Staricoff <span> & </span> Gladys "MagiCode" Romero <span> & </span> Luciana "LuMa" ???</i>
+            <i>Lionel "Lyon" Staricoff <span> & </span> Gladys "MagiCode" Romero <span> & </span> Luciana "LuMa"</i>
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
