Lee el archivo WebsInteres.json y lo agrega al front

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="path/to/prism.css" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css"> 
 
@@ -291,8 +290,8 @@
                     al inicio</a></h5>
 
             <h2 class="titulo">Webs de interés:</h2>
-            <div class="listaDeEnlaces">
-                <h3>Imágenes & iconos gratis:</h3>
+            <div class="listaDeWebs">
+                <!-- <h3>Imágenes & iconos gratis:</h3>
                 <ol>
                     <li><a href="https://www.iconfinder.com/" target="_blank">https://www.iconfinder.com/</a></li>
                     <li><a href="https://dryicons.com/" target="_blank">https://dryicons.com/</a></li>
@@ -458,7 +457,7 @@
                     <li><a href="https://platzi.com/clases/2822-marca-personal/46988-elige-las-comunidades-profesionales-para-tu-perfil/"
                             target="_blank">https://platzi.com/clases/2822-marca-personal/46988-elige-las-comunidades-profesionales-para-tu-perfil/
                         </a></li>
-                </ol>
+                </ol> -->
             </div>
         </div>
     </section>
@@ -496,7 +495,9 @@
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
+    <script type="module" src="js/webInteres.js"></script>
+
      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script>hljs.highlightAll()</script> 
+    <script>hljs.highlightAll()</script>
 </body>
 </html>
