--- a/index.html
+++ b/index.html
@@ -291,173 +291,7 @@
 
             <h2 class="titulo">Webs de interés:</h2>
             <div class="listaDeWebs">
-                <!-- <h3>Imágenes & iconos gratis:</h3>
-                <ol>
-                    <li><a href="https://www.iconfinder.com/" target="_blank">https://www.iconfinder.com/</a></li>
-                    <li><a href="https://dryicons.com/" target="_blank">https://dryicons.com/</a></li>
-                    <li><a href="https://vector.me/" target="_blank">https://vector.me/</a></li>
-                    <li><a href="https://vectorportal.com/es" target="_blank">https://vectorportal.com/es</a></li>
-                    <li><a href="https://www.1001freedownloads.com/"
-                            target="_blank">https://www.1001freedownloads.com/</a>
-                    </li>
-                    <li><a href="https://www.vectorstock.com/" target="_blank">https://www.vectorstock.com/</a></li>
-                    <li><a href="https://pixabay.com/es/" target="_blank">https://pixabay.com/es/</a></li>
-                    <li><a href="https://es.vecteezy.com/" target="_blank">https://es.vecteezy.com/</a></li>
-                    <li><a href="https://wallpapers.com/" target="_blank">https://wallpapers.com/</a></li>
-                    <li><a href="https://unsplash.com/es" target="_blank">https://unsplash.com/es</a></li>
-                    <li><a href="https://www.pexels.com/es-es/" target="_blank">https://www.pexels.com/es-es/</a></li>
-                    <li><a href="https://www.flaticon.es/" target="_blank">https://www.flaticon.es/ (tiene packs de
-                            iconos)</a></li>
-                    <li><a href="https://favicon.io/" target="_blank">https://favicon.io/</a></li>
-                    <li><a href="https://fontawesome.com/" target="_blank">https://fontawesome.com/</a></li>
-                    <li><a href="https://fonts.google.com/iconshttps://fonts.google.com/icons"
-                            target="_blank">https://fonts.google.com/iconshttps://fonts.google.com/icons</a></li>
-                    <li><a href="https://freeillustrations.xyz/" target="_blank">https://freeillustrations.xyz/</a></li>
-                    <li><a href="https://error404.fun/" target="_blank">https://error404.fun/</a></li>
-                    <li><a href="https://bgjar.com/" target="_blank">https://bgjar.com/ (fondos svg)</a></li>
-                    <li><a href="https://coolors.co/" target="_blank">https://coolors.co/ (para crear paletas de
-                            colores)</a></li>
-                    <li><a href="https://burst.shopify.com/" target="_blank">https://burst.shopify.com/ (fotos free)</a></li>
-                    <li><a href="https://stocksnap.io/" target="_blank">https://stocksnap.io/</a></li>
-                    <li><a href="https://www.stockvault.net/" target="_blank">https://www.stockvault.net/</a></li>
-                    <li><a href="https://pixabay.com/es/" target="_blank">https://pixabay.com/es/ </a></li>
-                    <li><a href="https://es.vecteezy.com/" target="_blank">https://es.vecteezy.com/</a></li>
-                    <li><a href="https://www.lifeofpix.com/" target="_blank">https://www.lifeofpix.com/</a></li>
-                    <li><a href="https://kaboompics.com/" target="_blank">https://kaboompics.com/</a></li>
-                    <li><a href="https://pngwing.com.es" target="_blank">https://pngwing.com.es</a></li>
-                </ol>
-
-                <h3>Prácticas y tutoriales:</h3>
-                <ol>
-                    <li><a href="https://www.frontendmentor.io/" target="_blank">https://www.frontendmentor.io/
-                            (practicas
-                            para armar web)</a></li>
-                    <li><a href="https://aprendecss.com/" target="_blank">https://aprendecss.com/ (tutoriales css
-                            flexbox y
-                            grid)</a></li>
-                </ol>
-
-                <h3>Editar online:</h3>
-                <ol>
-                    <li><a href="https://miro.com/es/" target="_blank">https://miro.com/es/ (diseño front web y
-                            diagramas de
-                            flujo colaborativos)</a></li>
-                    <li><a href="https://penpot.app/" target="_blank">https://penpot.app/ ( diseño front tipo sigma pero
-                            gratis)</a></li>
-                    <li><a href="https://www.ilovepdf.com/" target="_blank">https://www.ilovepdf.com/</a></li>
-                    <li><a href="https://www.canva.com/es_419/" target="_blank">https://www.canva.com/es_419/</a></li>
-                    <li><a href="https://www.photopea.com/" target="_blank">https://www.photopea.com/</a></li>
-                    <li><a href="http://www.umletino.com/umletino.html"
-                            target="_blank">http://www.umletino.com/umletino.html</a></li>
-                    <li><a href="https://boxy-svg.com/" target="_blank">https://boxy-svg.com/</a></li>
-                </ol>
-
-                <h3>Crear programas en línea:</h3>
-                <ol>
-                    <li><a href="https://stackblitz.com/" target="_blank">https://stackblitz.com/</a></li>
-                </ol>
-
-                <h3>Proyectos para realizar:</h3>
-                <ol>
-                    <li><a href="https://github.com/bradtraversy/50projects50days"
-                            target="_blank">https://github.com/bradtraversy/50projects50days</a></li>
-                </ol>
-
-                <h3>Templates html y css:</h3>
-                <ol>
-                    <li><a href="https://www.noupe.com/essentials/freebies-tools-templates/50-free-css-x-html-templates.html"
-                            target="_blank">https://www.noupe.com/essentials/freebies-tools-templates/50-free-css-x-html-templates.html</a>
-                    <li><a href="https://html5up.net/" target="_blank">https://html5up.net/</a></li>
-                </ol>
-
-                <h3>Efectos css:</h3>
-                <ol>
-                    <li><a href="https://ideakreativa.net/30-ejemplos-geniales-de-animacion-css-para-sitios-web-increibles/amp/"
-                            target="_blank">https://ideakreativa.net/30-ejemplos-geniales-de-animacion-css-para-sitios-web-increibles/amp/</a>
-                    </li>
-                </ol>
-
-                <h3>Convertir archivos jar de la libreria javaFx en apk para android:</h3>
-                <ol>
-                    <li><a href="https://gluonhq.com/products/scene-builder/"
-                            target="_blank">https://gluonhq.com/products/scene-builder/</a></li>
-                </ol>
-
-                <h3>Aprender desarrollo web y lenguajes:</h3>
-                <ol>
-                    <li><a href="https://open-bootcamp.com/" target="_blank">https://open-bootcamp.com/</a></li>
-                    <li><a href="https://100dayscss.com/" target="_blank">https://100dayscss.com/</a></li>
-                    <li><a href="https://web.dev/learn?hl=es-419" target="_blank">https://web.dev/learn?hl=es-419</a>
-                    </li>
-                    <li><a href="https://quickref.me/index.html" target="_blank">https://quickref.me/index.html</a></li>
-                    <li><a href="https://learnjavascript.online/app.html?id=1435"
-                            target="_blank">https://learnjavascript.online/app.html?id=1435</a></li>
-                    <li><a href="https://sqlinteractivo.desafiolatam.com/"
-                            target="_blank">https://sqlinteractivo.desafiolatam.com/</a></li>
-                    <li><a href="https://es.javascript.info/" target="_blank">https://es.javascript.info/</a></li>
-                    <li><a href="https://applicants.bairesdev.com/test-lab?lang=es"
-                            target="_blank">https://applicants.bairesdev.com/test-lab?lang=es</a></li>
-                    <li><a href="https://refactoring.guru/es/design-patterns/java"
-                            target="_blank">https://refactoring.guru/es/design-patterns/java</a></li>
-                    <li><a href="https://picodotdev.github.io/blog-bitix/"
-                            target="_blank">https://picodotdev.github.io/blog-bitix/</a></li>
-                </ol>
-
-                <h3>CEO web:</h3>
-                <ol>
-                    <li><a href="https://developer.chrome.com/docs/lighthouse/seo/meta-description?hl=es-419"
-                            target="_blank">https://developer.chrome.com/docs/lighthouse/seo/meta-description?hl=es-419</a>
-                    </li>
-                    <li><a href="https://www.aluracursos.com/blog/seo-herramientas-gratuitas-para-que-tu-sitio-se-posicione-mejor"
-                            target="_blank">https://www.aluracursos.com/blog/seo-herramientas-gratuitas-para-que-tu-sitio-se-posicione-mejor
-                        </a></li>
-                    <li><a href="https://www.freecodecamp.org/news/learn-html-and-css-from-the-ceo-of-scrimba/"
-                            target="_blank">https://www.freecodecamp.org/news/learn-html-and-css-from-the-ceo-of-scrimba/</a>
-                    </li>
-                </ol>
-
-                <h3>Editor online:</h3>
-                <ol>
-                    <li><a href="https://duckly.com/tools" target="_blank">https://duckly.com/tools</a></li>
-                    <li><a href="https://codepen.io/" target="_blank">https://codepen.io/</a></li>
-                </ol>
-
-                <h3>Editor svg online:</h3>
-                <ol>
-                    <li> <a href="https://boxy-svg.com/app" target="_blank">https://boxy-svg.com/app</a></li>
-                </ol>
-
-                <h3>Mejorar perfil LinkedIn:</h3>
-                <ol>
-                    <li><a href="https://www.aluracursos.com/blog/como-crear-un-perfil-atractivo-para-reclutadores-en-linkedin"
-                            target="_blank">https://www.aluracursos.com/blog/como-crear-un-perfil-atractivo-para-reclutadores-en-linkedin</a>
-                    </li>
-                </ol>
-
-                <h3>Crear componentes con ai:</h3>
-                <ol>
-                    <li><a href="https://ai2ui.co/es" target="_blank">https://ai2ui.co/es</a></li>
-                </ol>
-
-                <h3>Desarrollo front end:</h3>
-                <ol>
-                    <li><a href="https://design.penpot.app/" target="_blank">https://design.penpot.app/</a></li>
-                </ol>
-
-                <h3>Servidores web:</h3>
-                <ol>
-                    <li><a href="https://stackblitz.com/?starters=backend"
-                            target="_blank">https://stackblitz.com/?starters=backend</a></li>
-                    <li><a href="https://northflank.com/" target="_blank">https://northflank.com/</a></li>
-                    <li><a href="https://www.netlify.com/" target="_blank">https://www.netlify.com/</a></li>
-                </ol>
-
-                <h3>Cursos gratuitos:</h3>
-                <ol>
-                    <li><a href="https://platzi.com/clases/2822-marca-personal/46988-elige-las-comunidades-profesionales-para-tu-perfil/"
-                            target="_blank">https://platzi.com/clases/2822-marca-personal/46988-elige-las-comunidades-profesionales-para-tu-perfil/
-                        </a></li>
-                </ol> -->
+                 <!-- Aquí cargo el WebsInteres.json -->
             </div>
         </div>
     </section>
