obj para el menu items listo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="menuMobile">
                 <div class="listado">
 
-                    <details>
+                    <!-- <details>
                         <summary>Alertas</summary>
                         <p><a href="#alertas-01">Ejemplo 1</a></p>
                     </details>
@@ -175,7 +175,7 @@
                     <details>
                         <summary>Tarjetas (cards)</summary>
                         <p><a href="#tarjetas-01">Ejemplo 1</a></p>
-                    </details>
+                    </details> -->
                 </div>
             </div>
         </div>
@@ -329,6 +329,7 @@
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
+    <script type="module" src="js/itemsMenuLibreria.js"></script>
     <script type="module" src="js/webInteres.js"></script>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
