--- a/index.html
+++ b/index.html
@@ -67,115 +67,6 @@
             <div class="menuMobile">
                 <div class="listado">
 
-                    <!-- <details>
-                        <summary>Alertas</summary>
-                        <p><a href="#alertas-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Animaciones</summary>
-                        <p><a href="#animacion-01">Ejemplo 1</a></p>
-                        <p><a href="#animacion-01">Ejemplo 2</a></p>
-                        <p><a href="#animacion-01">Ejemplo 3</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Animación de Carga (spinner)</summary>
-                        <p><a href="#spinner-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Insignias</summary>
-                        <p><a href="#insignias-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Barras de Navegación</summary>
-                        <p><a href="#barrasDeNavegacion-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Barras de progreso (progress bar)</summary>
-                        <p><a href="#barrasDeProgreso-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Botones</summary>
-                        <p><a href="#boton-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Carrusel</summary>
-                        <p><a href="#carrusel-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Colapso</summary>
-                        <p><a href="#colapso-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Desplegables</summary>
-                        <p><a href="#desplegable-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Formularios</summary>
-                        <p><a href="#formularios-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Indicadores (toolips)</summary>
-                        <p><a href="#indicadores-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Jumbotron</summary>
-                        <p><a href="#jumbotron-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Listas</summary>
-                        <p><a href="#listas-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Menú Desplegable</summary>
-                        <p><a href="#menuDesplegable-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Modal</summary>
-                        <p><a href="#modal-01">Ejemplo 1</a></p>
-                    </details>
-                    <details>
-                        <summary>Paginación</summary>
-                        <p><a href="#paginacion-01">Ejemplo 1</a></p>
-                    </details>
-                    <details>
-                        <summary>Paneles</summary>
-                        <p><a href="#paneles-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Popovers</summary>
-                        <p><a href="#popovers-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Pestañas (tabs)</summary>
-                        <p><a href="#pestañas-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Plantillas (templates)</summary>
-                        <p><a href="#plantillas-01">Ejemplo 1</a></p>
-                    </details>
-
-                    <details>
-                        <summary>Tarjetas (cards)</summary>
-                        <p><a href="#tarjetas-01">Ejemplo 1</a></p>
-                    </details> -->
                 </div>
             </div>
         </div>
@@ -193,36 +84,11 @@
             <div class="ejemplo">
                 <button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px"
                         height="20px"></button>
-                <!-- <pre style="tab-size: 2;">
-                <code class="ej_html ej_css ej_js ej_object">  -->
-                <div class="contenidoEjemplo">
-                    <!-- código HTML aquí -->
-                    <!-- &lt;!DOCTYPE html&gt;<br>
-                    &lt;html lang="es"&gt;<br>
-                    &lt;head&gt;<br>
-                    &lt;meta charset="UTF-8"&gt;<br>
-                    &lt;meta name="viewport" content="width=device-width, initial-scalegt;<br>
-                    &lt;title&gt;Mi Página&lt;/title&gt;<br>
-                    &lt;/head&gt;<br>
-                    &lt;body&gt;<br>
-                        &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;<br>
-                    &lt;/body&gt;<br>
-                    &lt;/html&gt;<br>
 
-                    &lt;!DOCTYPE html&gt;<br>
-                    &lt;html lang="es"&gt;<br>
-                    &lt;head&gt;<br>
-                    &lt;meta charset="UTF-8"&gt;<br>
-                    &lt;meta name="viewport" content="width=device-width, initial-scalegt;<br>
-                    &lt;title&gt;Mi Página&lt;/title&gt;<br>
-                    &lt;/head&gt;<br>
-                    &lt;body&gt;<br>
-                        &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;<br>
-                    &lt;/body&gt;<br>
-                    &lt;/html&gt;<br> -->
+                <div class="contenidoEjemplo">
+                   
                 </div>
-                 <!-- </code>
-                </pre>  -->
+
             </div>
         </div>
         
@@ -299,6 +165,7 @@
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
                     al inicio</a></h5>
+            <div class="container_QSomos">
             <h2>¿Quiénes Somos?</h2>
 
             <p>Nosotros, un grupo de apasionados programadores, hemos unido fuerzas para crear
@@ -325,7 +192,8 @@
                 código y recurso que compartimos!
             </p>
             <p>Programáticamente,<br></p>
-            <i>Lionel "Lyon" Staricoff <span> & </span> Gladys "MagiCode" Romero <span> & </span> Luciana "LuMa"</i>
+            <i>Lionel "Lyon" Staricoff <span> && </span> Gladys "MagiCode" Romero <span> && </span> Luciana "LuMa"</i>
+            </div>
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
@@ -333,6 +201,5 @@
     <script type="module" src="js/webInteres.js"></script>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script>hljs.highlightAll()</script>
-</body>
+    <script>hljs.highlightAll()</script></body>
 </html>
