Sólo dejé el menu.js en el index y desde allí importé los otros js

--- a/index.html
+++ b/index.html
@@ -197,9 +197,5 @@
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
-    <script type="module" src="js/itemsMenuLibreria.js"></script>
-    <script type="module" src="js/webInteres.js"></script>
-
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script>hljs.highlightAll()</script></body>
+</body>
 </html>
