colorando alguno elementos

--- a/index.html
+++ b/index.html
@@ -195,31 +195,29 @@
                         height="20px"></button>
                 <!-- <pre style="tab-size: 2;">
                 <code class="ej_html ej_css ej_js ej_object">  -->
-                <div class="contenidoEjemplo">
-                    <!-- código HTML aquí -->
-                    <!-- &lt;!DOCTYPE html&gt;<br>
-                    &lt;html lang="es"&gt;<br>
-                    &lt;head&gt;<br>
-                    &lt;meta charset="UTF-8"&gt;<br>
-                    &lt;meta name="viewport" content="width=device-width, initial-scalegt;<br>
-                    &lt;title&gt;Mi Página&lt;/title&gt;<br>
-                    &lt;/head&gt;<br>
-                    &lt;body&gt;<br>
-                        &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;<br>
-                    &lt;/body&gt;<br>
-                    &lt;/html&gt;<br>
-
-                    &lt;!DOCTYPE html&gt;<br>
-                    &lt;html lang="es"&gt;<br>
-                    &lt;head&gt;<br>
-                    &lt;meta charset="UTF-8"&gt;<br>
-                    &lt;meta name="viewport" content="width=device-width, initial-scalegt;<br>
-                    &lt;title&gt;Mi Página&lt;/title&gt;<br>
-                    &lt;/head&gt;<br>
-                    &lt;body&gt;<br>
-                        &lt;h1&gt;Hola, Mundo!&lt;/h1&gt;<br>
-                    &lt;/body&gt;<br>
-                    &lt;/html&gt;<br> -->
+                <div class="colorear">
+                    <header> encabezado</header>
+                    <main> cuerpo</main>
+                    <footer> pie de pagina</footer>
+                    <h1>titulo</h1>
+                    <h2>titulo 2</h2>
+                    <h3>titulo  3</h3>
+                    <h4>titulo 4</h4>
+                    <H5>titulo 5</H5>
+                    <H6>titulo 6</H6>
+                    <button> boton</button>
+                </div>
+                <div class="colorear">
+                    <header> encabezado</header>
+                    <main> cuerpo</main>
+                    <footer> pie de pagina</footer>
+                    <h1>titulo</h1>
+                    <h2>titulo 2</h2>
+                    <h3>titulo  3</h3>
+                    <h4>titulo 4</h4>
+                    <H5>titulo 5</H5>
+                    <H6>titulo 6</H6>
+                    <button> boton</button>
                 </div>
                  <!-- </code>
                 </pre>  -->
@@ -334,5 +332,7 @@
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script>hljs.highlightAll()</script>
+
+  
 </body>
 </html>
