--- a/index.html
+++ b/index.html
@@ -196,12 +196,15 @@
                 <!-- <pre style="tab-size: 2;">
                 <code class="ej_html ej_css ej_js ej_object">  -->
                 <div class="colorear">
+                    <header id="1"> encabezado</header>
                     <header> encabezado</header>
-                    <main> cuerpo</main>
-                    <footer> pie de pagina</footer>
+                    <main id="1">cuerpo</main>
+                    <footer class="new class"> pie de pagina</footer>
+                  <section>section</section>
+                    <h1>titulo</h1>
                     <h1>titulo</h1>
                     <h2>titulo 2</h2>
-                    <h3>titulo  3</h3>
+                    <h3>titulo 3</h3>
                     <h4>titulo 4</h4>
                     <H5>titulo 5</H5>
                     <H6>titulo 6</H6>
