agregué botón para Volver al inicio

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <footer> pie de pagina</footer>
                     <h1>titulo</h1>
                     <h2>titulo 2</h2>
-                    <h3>titulo  3</h3>
+                    <h3>titulo 3</h3>
                     <h4>titulo 4</h4>
                     <H5>titulo 5</H5>
                     <H6>titulo 6</H6>
@@ -108,8 +108,9 @@
 
             </div>
         </div>
-        
-    </section>
+        <button id="btnVolverArriba" onclick="volverArriba()"><a href="#inicio"><img src="./img/iconos/flecha-arriba.png"  alt="Al inicio"></a></button>
+
+    </section> 
 
     <section class="enlaces" id="enlaces">
         <div>
