--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/iconos/logo-ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <title>Biblioteca de Recursos Web</title>
 </head>
@@ -108,7 +109,7 @@
 
             </div>
         </div>
-        <button id="btnVolverArriba" onclick="volverArriba()"><a href="#inicio"><img src="./img/iconos/flecha-arriba.png"  alt="Al inicio"></a></button>
+        <button id="btnVolverArriba"><a href="#inicio"><img src="./img/iconos/flecha-arriba.png"  alt="Al inicio"></a></button>
 
     </section> 
 
