--- a/index.html
+++ b/index.html
@@ -188,21 +188,21 @@
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
                     al inicio</a></h5>
             <div class="container_QSomos">
-            <h2>¿Quiénes Somos?</h2>
+            <h2>¿Quiénes somos?</h2>
 
             <p>Nosotros, un grupo de apasionados programadores, hemos unido fuerzas para crear
                 esta biblioteca de recursos, con la visión de facilitar tu camino en el fascinante mundo del desarrollo
                 de
                 software.</p>
 
-            <h2>Nuestra motivación:</h2>
+            <h2>Nuestra motivación</h2>
             <p>Este proyecto surgió de la convicción de que el aprendizaje es más efectivo cuando se comparte. Cada uno
                 de
                 nosotros aporta una perspectiva única, y estamos emocionados de poner a tu disposición los conocimientos
                 y herramientas que hemos recopilado a lo largo de nuestros viajes.
             </p>
 
-            <h2>Únete a Nuestra Comunidad:</h2>
+            <h2>Únete a nuestra comunidad</h2>
             <p>Además de ser una fuente de recursos, queremos que te sientas parte de nuestra comunidad. Explora,
                 aprende y
                 comparte tus experiencias con nosotros. Juntos, podemos hacer que el mundo de la programación sea aún
