--- a/contenedorEjemplos.html
+++ b/contenedorEjemplos.html
@@ -5,9 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="path/to/prism.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/themes/prism.min.css">
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css"> 
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css"> 
         <link rel="stylesheet" href="./css/styles.css">
         <title>Biblioteca de Recursos Web</title>
     </head>
@@ -60,8 +58,11 @@
                     <label for="check-2" class="checkbtn-2">
                         <img src="img/iconos/menu.png" alt="menú">
                     </label>
-                    <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
-                            al inicio</a></h5>
+                    <h5 class="volver">
+                        <a href="#inicio">
+                            <img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver al inicio
+                        </a>
+                    </h5>
                     <h3>LIBRERIA</h3>
                 </div>
     
@@ -389,7 +390,7 @@
             </div>
         </section>
         <script type="module" src="js/menu.js"></script>
-        <script type="module" src="./js/index.js"></script>
+        <!-- <script type="module" src="./js/index.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
         <script>hljs.highlightAll()</script> 
