--- a/index.html
+++ b/index.html
@@ -87,8 +87,15 @@
                     <header> encabezado</header>
                     <main id="1">cuerpo</main>
                     <footer class="new class"> pie de pagina</footer>
-                  <section>section</section>
-                    <h1>titulo</h1>
+                  <section>
+                    <ul>
+                        <h1>compras:</h1>
+                        <li>pan</li>
+                        <li>leche</li>
+                        <li>azucar</li>
+                    </ul>
+                  </section>
+                    
                     <h1>titulo</h1>
                     <h2>titulo 2</h2>
                     <h3>titulo 3</h3>
