--- a/contenedorEjemplos.html
+++ b/contenedorEjemplos.html
@@ -80,9 +80,9 @@
             </div>
 
             <div class="ejemplo">
-                <iframe id="iframe" name="codeFrame" src="" frameborder="0" width="100%" height="100%"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px" height="20px"></button>
-                
+                <div id="btn-contenedor"><button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px" height="20px"></button></div>
+                <div id="ej-contenedor"></div>
+               
                 <!--                 
                 <div class="colorear">
                     <header id="1"> encabezado</header>
